# Iot_Plant_Monitoring_System

components/MQTT_Fn/: CMakeLists.txt  MQTT_Fn.c  README.md
components/MQTT_Fn/include/: MQTT_Fn.h
components/WiFi_Fn/: CMakeLists.txt  WiFi_Fn.c
components/WiFi_Fn/include/: WiFi_Fn.h
components/cJSON/: CMakeLists.txt  cJSON.c
components/oneShotADC_Fn/: CMakeLists.txt  oneShotADC_Fn.c
components/oneShotADC_Fn/include/: oneShotADC_Fn.h
main/: CMakeLists.txt  README.md  main.c
